# solar_apparent_time

./: .gitignore  README.md  pyproject.toml
solar_apparent_time/: __init__.py  solar_apparent_time.py
