[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]

[project]
name = "solar_apparent_time"
version = "1.0.0"
description = "formats logging messages in color"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]

requires-python = ">=3.11"

[tool.setuptools.package-data]
solar_apparent_time = ["*.txt"]
